# sensitive-info-check

./: .gitignore  README.md  pyproject.toml
examples/: custom_patterns.json
sensitive_check/: __init__.py  cli.py  config_loader.py  detector.py  excel_exporter.py  patterns.py  scanner.py
test_samples/: SampleJava.java  sample.go  sample.js  sample.py  sample_health_device.py  sample_personal.py
tests/: test_config_loader.py  test_detector.py  test_excel_exporter.py  test_patterns.py  test_scanner.py
